--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev" : "tsx watch src/server.ts",
-    "build" : "tsup src --out-dir build"
+    "start:dev": "tsx watch src/server.ts",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "fastify": "^5.4.0"
+    "dotenv": "17.2.1",
+    "fastify": "^5.4.0",
+    "zod": "4.0.14"
   }
 }
