--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "9.32.0",
     "@types/node": "^24.2.0",
+    "eslint": "9.32.0",
+    "globals": "16.3.0",
+    "jiti": "2.5.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "8.39.0"
   },
   "dependencies": {
     "dotenv": "17.2.1",
