--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,12 @@
     // "rootDir": "./src",
     // "outDir": "./dist",
 
+    "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
+    "paths": {
+      "@/*": ["./src/*"]
+
+    },                                                   
+
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
