feat(prisma): add prisma orm configuration

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "eslint": "9.32.0",
     "globals": "16.3.0",
     "jiti": "2.5.1",
+    "prisma": "6.15.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "typescript-eslint": "8.39.0"
   },
   "dependencies": {
+    "@prisma/client": "6.15.0",
     "dotenv": "17.2.1",
     "fastify": "^5.4.0",
     "zod": "4.0.14"
