--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "9.32.0",
+    "@types/bcryptjs": "3.0.0",
     "@types/node": "^24.2.0",
     "eslint": "9.32.0",
     "globals": "16.3.0",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.15.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "17.2.1",
     "fastify": "^5.4.0",
     "zod": "4.0.14"
