test: add vitest to do tests

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "bcryptjs": "3.0.2",
     "dotenv": "17.2.1",
     "fastify": "^5.4.0",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4",
     "zod": "4.0.14"
   }
 }
