--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "@eslint/js": "9.32.0",
     "@types/bcryptjs": "3.0.0",
     "@types/node": "^24.2.0",
+    "@vitest/coverage-v8": "3.2.4",
+    "@vitest/ui": "3.2.4",
     "eslint": "9.32.0",
     "globals": "16.3.0",
     "jiti": "2.5.1",
