--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@prisma/client": "6.15.0",
     "bcryptjs": "3.0.2",
+    "dayjs": "1.11.18",
     "dotenv": "17.2.1",
     "fastify": "^5.4.0",
     "vite-tsconfig-paths": "5.1.4",
