--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-NODE_ENV=
+NODE_ENV=dev
+PORT=3000
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+JWT_SECRET=ignitenode2025
