--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript-eslint": "8.39.0"
   },
   "dependencies": {
+    "@fastify/jwt": "10.0.0",
     "@prisma/client": "6.15.0",
     "bcryptjs": "3.0.2",
     "dayjs": "1.11.18",
