--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
+    "test": "vitest run --project unit",
+    "test:e2e" : "vitest run --project e2e",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
