--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "test": "vitest run --project unit",
-    "test:watch": "vitest --dir src/services",
-    "test:e2e": "vitest run --dir src/http",
+    "test:watch": "vitest run --project unit",
+    "test:e2e": "vitest run --project e2e",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
