--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript-eslint": "8.39.0"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "10.0.0",
     "@prisma/client": "5.18.0",
     "@types/supertest": "6.0.3",
